# happyphone

./: .gitignore  README-old.md  README.md  TESTING.md  TODO.md  azure-open-turn-port.sh  create-package-macos.sh  create-package.sh  deploy-azure-tee.sh  install-happyphone.sh  install-linux.sh  install-termux.sh  install.sh  pyproject.toml  setup-happy-command.sh  setup-tee-server.sh  setup-turn-server.sh  termux-quick-install.sh  test_contact_none_public_key.py  test_ratchet.py  test_snp_parsing.py  test_verification_flow.py
Formula/: happyphone.rb
PyAudio-0.2.14/: setup.py
happyphone/: __init__.py  __main__.py  audio.py  cli.py  config.py  crypto.py  session.py  signaling.py  snp_report.py  storage.py  tee.py  waveform.py
happyphone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: package.json
server/src/: index.js
